# eos-knowledge-services

./: .gitignore  Makefile.am  Makefile.am.dbus-service.inc  Makefile.am.multi-services.inc  autogen.sh  build-flatpak.sh  com.endlessm.EknServices.json  com.endlessm.EknServices.json.in  com.endlessm.MultiEknServices.json.in  configure.ac
docs/: Architecture.md  DiscoveryFeedProvider.md  MetadataProvider.md
multi-services/: eks-multi-services-dispatcher.c
search-provider/: applicationV1.js  com.endlessm.EknServices.SearchProviderV1.service.in  com.endlessm.EknServices2.SearchProviderV2.service.in  com.endlessm.EknServices3.SearchProviderV3.service.in  com.endlessm.EknServices4.SearchProviderV4.service.in  eks-discovery-feed-provider-dbus.xml  eks-discovery-feed-provider.c  eks-discovery-feed-provider.h  eks-errors.c  eks-errors.h  eks-knowledge-app-dbus.xml  eks-metadata-provider-dbus.xml  eks-metadata-provider.c  eks-metadata-provider.h  eks-provider-iface.c  eks-provider-iface.h  eks-query-util.c  eks-query-util.h  eks-search-app.c  eks-search-app.h  eks-search-main.c  eks-search-provider-dbus.xml  eks-search-provider-v1.gresource.xml  eks-search-provider-v1.in  eks-search-provider.c  eks-search-provider.h  eks-shards-util.c  eks-shards-util.h  eks-subtree-dispatcher.c  eks-subtree-dispatcher.h  searchProviderV1.js
